# ieeg

./: LICENSE  README.md
Analysis/: Spectrogram-ERP.ipynb  SuppressionDuration.ipynb
AnalysisCode/: Spectogrum-ERP.py  Spectrum, ERP.ipynb  SuppressionDuration.py
task-raspberry/: CMakeLists.txt  main.cpp
